# trading_journal_dashboard_pro

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/pages/: 1_about.py
src/trading_journal_dashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_parsers.py
