[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-journal-dashboard"
version = "0.1.0"
description = "Streamlit + Plotly trading journal dashboard for NinjaTrader exports"
requires-python = ">=3.10"
dependencies = [
  "streamlit",
  "pandas",
  "numpy",
  "plotly"
]

[tool.setuptools.packages.find]
where = ["src"]
